--- a/DieEditor/GameProject/NewProjectView.xaml
+++ b/DieEditor/GameProject/NewProjectView.xaml
@@ -7,86 +7,97 @@
              mc:Ignorable="d" Width="800"
              d:DataContext="{d:DesignInstance Type=local:NewProject, IsDesignTimeCreatable=True}"
              d:DesignHeight="450" d:DesignWidth="800">
-    <UserControl.DataContext>
-        <local:NewProject/>
-    </UserControl.DataContext>
+	<UserControl.DataContext>
+		<local:NewProject/>
+	</UserControl.DataContext>
 
-    <Grid Background="Black">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+	<Grid Background="Black">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="*"/>
+			<RowDefinition Height="Auto"/>
+		</Grid.RowDefinitions>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="200"/>
+			<ColumnDefinition Width="*"/>
+		</Grid.ColumnDefinitions>
 
-        <ListBox Grid.Row="0" Grid.Column="0"
+		<ListBox Grid.Row="0" Grid.Column="0"
                  Background="DarkGray" 
                  Foreground="White" 
-                 FontSize="16"/>
+                 FontSize="16"
+                 x:Name="templateListBox"
+				 SelectedIndex= "0"
+                 ItemsSource="{Binding ProjectTemplates}">
+			<ListBox.ItemTemplate>
+				<DataTemplate>
+					<StackPanel Orientation="Horizontal" Margin="5">
+						<Image Source="{Binding IconFilePath}" Width="32" Height="32" Margin="0,0,10,0"/>
+						<TextBlock Text="{Binding ProjectType}" VerticalAlignment="Center"/>
+					</StackPanel>
+				</DataTemplate>
+			</ListBox.ItemTemplate>
+		</ListBox>
 
-        <Grid Grid.Row="0" Grid.Column="1" Margin="5">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="100"/>
-            </Grid.RowDefinitions>
+		<Grid Grid.Row="0" Grid.Column="1" Margin="5">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="*"/>
+				<RowDefinition Height="100"/>
+			</Grid.RowDefinitions>
 
-            <Border Grid.Row="0" Grid.Column="1"
-                Margin="5,0,0,0" 
-                BorderBrush="Gray" 
-                BorderThickness="1">
-                <TextBlock Text="Content Area" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-            </Border>
+			<!-- Fixed: Bind to SelectedItem from ListBox -->
+			<Border Grid.Row="0" 
+                    Margin="5,0,0,0" 
+                    BorderBrush="Gray" 
+                    BorderThickness="1">
+				<Image Source="{Binding SelectedItem.ScreenshotFilePath, ElementName=templateListBox}" 
+                       Stretch="Uniform"/>
+			</Border>
 
-            <Grid Grid.Row="1">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <StackPanel Grid.Row="0" Orientation="Vertical" HorizontalAlignment="Stretch">
-                    <TextBlock Text="Name:" Foreground="Azure" />
-                    <TextBox Text="{Binding Name}" Height="30" FontSize="16"/>
-                </StackPanel>
-                <StackPanel Grid.Row="1" Orientation="Vertical" HorizontalAlignment="Stretch">
-                    <TextBlock Text="Path:" Foreground="Azure"/>
+			<Grid Grid.Row="1">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="*"/>
+					<RowDefinition Height="*"/>
+				</Grid.RowDefinitions>
+				<StackPanel Grid.Row="0" Orientation="Vertical" HorizontalAlignment="Stretch">
+					<TextBlock Text="Name:" Foreground="Azure" />
+					<TextBox Text="{Binding ProjectName}" Height="30" FontSize="16"/>
+				</StackPanel>
+				<StackPanel Grid.Row="1" Orientation="Vertical" HorizontalAlignment="Stretch">
+					<TextBlock Text="Path:" Foreground="Azure"/>
 
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
+					<Grid>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="*"/>
+							<ColumnDefinition Width="Auto"/>
+						</Grid.ColumnDefinitions>
 
-                        <TextBox Text="{Binding Path}" Height="30" FontSize="16" VerticalAlignment="Center"/>
+						<TextBox Text="{Binding ProjectPath}" Height="30" FontSize="16" VerticalAlignment="Center"/>
 
-                        <Button Grid.Column="1" Content="Browse" Width="100" Height="30" Margin="5,0,0,0"/>
-                    </Grid>
-                </StackPanel>
-            </Grid>
-        </Grid>
-        
-        <StackPanel
-                Grid.Row="1" Grid.Column="1"
-                Orientation="Horizontal" 
-                HorizontalAlignment="Center" 
-                Margin="0,0,0,10">
+						<Button Grid.Column="1" Content="Browse" Width="100" Height="30" Margin="5,0,0,0"/>
+					</Grid>
+				</StackPanel>
+			</Grid>
+		</Grid>
 
-            <Button x:Name="OpenProjectButton"
-                IsDefault="True" 
-                Click="OpenButton_Click" 
-                Content="Open" 
-                Width="100" 
-                Height="30" 
-                Margin="5,0"/>
+		<StackPanel Grid.Row="1" Grid.Column="1"
+                    Orientation="Horizontal" 
+                    HorizontalAlignment="Center" 
+                    Margin="0,0,0,10">
+			<Button x:Name="OpenProjectButton"
+                    IsDefault="True" 
+                    Click="OpenButton_Click" 
+                    Content="Open" 
+                    Width="100" 
+                    Height="30" 
+                    Margin="5,0"/>
 
-            <Button x:Name="NewProjectButton"
-                IsCancel="True" 
-                Click="CancelButton_Click" 
-                Content="Cancel" 
-                Width="100" 
-                Height="30" 
-                Margin="0"/>
-        </StackPanel>
-</Grid>
-    
+			<Button x:Name="NewProjectButton"
+                    IsCancel="True" 
+                    Click="CancelButton_Click" 
+                    Content="Cancel" 
+                    Width="100" 
+                    Height="30" 
+                    Margin="0"/>
+		</StackPanel>
+	</Grid>
 </UserControl>
