--- a/DieEditor/GameProject/NewProjectView.xaml
+++ b/DieEditor/GameProject/NewProjectView.xaml
@@ -15,6 +15,7 @@
 		<Grid.RowDefinitions>
 			<RowDefinition Height="*"/>
 			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="30"/>
 		</Grid.RowDefinitions>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="200"/>
@@ -38,7 +39,7 @@
 			</ListBox.ItemTemplate>
 		</ListBox>
 
-		<Grid Grid.Row="0" Grid.Column="1" Margin="5">
+		<Grid Grid.Row="0" Grid.Column="1" Margin="5, 0">
 			<Grid.RowDefinitions>
 				<RowDefinition Height="*"/>
 				<RowDefinition Height="100"/>
@@ -57,47 +58,57 @@
 				<Grid.RowDefinitions>
 					<RowDefinition Height="*"/>
 					<RowDefinition Height="*"/>
+					<RowDefinition Height="*"/>
 				</Grid.RowDefinitions>
-				<StackPanel Grid.Row="0" Orientation="Vertical" HorizontalAlignment="Stretch">
-					<TextBlock Text="Name:" Foreground="Azure" />
-					<TextBox Text="{Binding ProjectName}" Height="30" FontSize="16"/>
-				</StackPanel>
-				<StackPanel Grid.Row="1" Orientation="Vertical" HorizontalAlignment="Stretch">
-					<TextBlock Text="Path:" Foreground="Azure"/>
+				<Grid Grid.Row="0">
+					<StackPanel Orientation="Vertical" HorizontalAlignment="Stretch">
+						<TextBlock Text="Name:" Foreground="Azure" />
+						<TextBox Text="{Binding ProjectName}" Height="20" FontSize="12"/>
+					</StackPanel>
+				</Grid>
+				<Grid Grid.Row="1">
+					<StackPanel Orientation="Vertical" HorizontalAlignment="Stretch">
+						<TextBlock Text="Path:" Foreground="Azure"/>
 
-					<Grid>
-						<Grid.ColumnDefinitions>
-							<ColumnDefinition Width="*"/>
-							<ColumnDefinition Width="Auto"/>
-						</Grid.ColumnDefinitions>
+						<Grid>
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="*"/>
+								<ColumnDefinition Width="Auto"/>
+							</Grid.ColumnDefinitions>
 
-						<TextBox Text="{Binding ProjectPath}" Height="30" FontSize="16" VerticalAlignment="Center"/>
+							<TextBox Text="{Binding ProjectPath}" Height="20" FontSize="12" VerticalAlignment="Center"/>
+							<Button Grid.Column="1" Content="Browse" Width="100" Height="20" Margin="5,0,0,0"/>
+						</Grid>
+					</StackPanel>
+				</Grid>
+				<Grid Grid.Row="2" Margin="0">
+					<StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
+						<Button x:Name="CreateProjectButton"
+								IsDefault="True" 
+								IsEnabled="{Binding IsValid}"
+								Click="CreateButton_Click" 
+								Content="Create" 
+								Width="100" 
+								Height="20" 
+								Margin="5,0"/>
 
-						<Button Grid.Column="1" Content="Browse" Width="100" Height="30" Margin="5,0,0,0"/>
-					</Grid>
-				</StackPanel>
+						<Button x:Name="NewProjectButton"
+								IsCancel="True" 
+								Click="CancelButton_Click" 
+								Content="Cancel" 
+								Width="100" 
+								Height="20" 
+								Margin="0"/>
+					</StackPanel>
+				</Grid>
+
 			</Grid>
+
 		</Grid>
-
-		<StackPanel Grid.Row="1" Grid.Column="1"
-                    Orientation="Horizontal" 
-                    HorizontalAlignment="Center" 
-                    Margin="0,0,0,10">
-			<Button x:Name="OpenProjectButton"
-                    IsDefault="True" 
-                    Click="OpenButton_Click" 
-                    Content="Open" 
-                    Width="100" 
-                    Height="30" 
-                    Margin="5,0"/>
-
-			<Button x:Name="NewProjectButton"
-                    IsCancel="True" 
-                    Click="CancelButton_Click" 
-                    Content="Cancel" 
-                    Width="100" 
-                    Height="30" 
-                    Margin="0"/>
-		</StackPanel>
+		<Grid Grid.Row="2" Grid.Column="1">
+			<StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+				<TextBlock Text="{Binding ErrorMsg}" Foreground="Red" />
+			</StackPanel>
+		</Grid>
 	</Grid>
 </UserControl>
