--- a/DieEditor/GameProject/ProjectBrowserDialog.xaml
+++ b/DieEditor/GameProject/ProjectBrowserDialog.xaml
@@ -11,15 +11,15 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition />
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
-            <ToggleButton x:Name="OpenProjectButton"
-                IsChecked="True" Click="ToggleProjectButton_Click" Content="New Project"  Margin="5, 1" Width="100" />
-            <ToggleButton x:Name="NewProjectButton"
-                IsChecked="False" Click="ToggleProjectButton_Click" Content="Open Project" Margin="5, 1" Width="100" />
+		<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
+			<ToggleButton x:Name="OpenProjectButton"
+                IsChecked="True" Click="ToggleProjectButton_Click" Content="Open Project"  Margin="5, 1" Width="100" />
+			<ToggleButton x:Name="NewProjectButton"
+                IsChecked="False" Click="ToggleProjectButton_Click" Content="New Project" Margin="5, 1" Width="100" />
         </StackPanel>
         <StackPanel Orientation="Horizontal" Grid.Row="1" x:Name="browserContent">
-            <local:NewProjectView/>
             <local:OpenProjectView/>
+            <local:NewProjectView/>
         </StackPanel>
     </Grid>
 </Window>
