--- a/DieEditor/MainWindow.xaml
+++ b/DieEditor/MainWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DieEditor"
+        xmlns:editors="clr-namespace:DieEditor.Editors"
         mc:Ignorable="d" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
-        Title="DieEditor" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+        Title="DieEditor" Width="1920" Height="1080" >
+	<Grid>
+		<editors:WorldEditorView/>
+	</Grid>
 </Window>
