--- a/DieEditor/GameProject/NewProjectView.xaml
+++ b/DieEditor/GameProject/NewProjectView.xaml
@@ -8,106 +8,49 @@
              d:DataContext="{d:DesignInstance Type=local:NewProject, IsDesignTimeCreatable=True}"
              d:DesignHeight="450" d:DesignWidth="800">
 	<UserControl.DataContext>
-		<local:NewProject/>
+		<local:NewProject />
 	</UserControl.DataContext>
-
-	<Grid Background="Black">
-		<Grid.RowDefinitions>
-			<RowDefinition Height="*"/>
-			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="30"/>
-		</Grid.RowDefinitions>
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="200"/>
-			<ColumnDefinition Width="*"/>
-		</Grid.ColumnDefinitions>
-
-		<ListBox Grid.Row="0" Grid.Column="0"
-                 Background="DarkGray" 
-                 Foreground="White" 
-                 FontSize="16"
-                 x:Name="templateListBox"
-				 SelectedIndex= "0"
-                 ItemsSource="{Binding ProjectTemplates}">
-			<ListBox.ItemTemplate>
-				<DataTemplate>
-					<StackPanel Orientation="Horizontal" Margin="5">
-						<Image Source="{Binding IconFilePath}" Width="32" Height="32" Margin="0,0,10,0"/>
-						<TextBlock Text="{Binding ProjectType}" VerticalAlignment="Center"/>
-					</StackPanel>
-				</DataTemplate>
-			</ListBox.ItemTemplate>
-		</ListBox>
-
-		<Grid Grid.Row="0" Grid.Column="1" Margin="5, 0">
-			<Grid.RowDefinitions>
-				<RowDefinition Height="*"/>
-				<RowDefinition Height="100"/>
-			</Grid.RowDefinitions>
-
-			<Border Grid.Row="0" 
-                    Margin="5,0,0,0" 
-                    BorderBrush="Gray" 
-                    BorderThickness="1">
-				<Image Source="{Binding SelectedItem.ScreenshotFilePath, ElementName=templateListBox}" 
-                       Stretch="Uniform"/>
-			</Border>
-
-			<Grid Grid.Row="1">
-				<Grid.RowDefinitions>
-					<RowDefinition Height="*"/>
-					<RowDefinition Height="*"/>
-					<RowDefinition Height="*"/>
-				</Grid.RowDefinitions>
-				<Grid Grid.Row="0">
-					<StackPanel Orientation="Vertical" HorizontalAlignment="Stretch">
-						<TextBlock Text="Name:" Foreground="Azure" />
-						<TextBox Text="{Binding ProjectName}" Height="20" FontSize="12"/>
-					</StackPanel>
-				</Grid>
-				<Grid Grid.Row="1">
-					<StackPanel Orientation="Vertical" HorizontalAlignment="Stretch">
-						<TextBlock Text="Path:" Foreground="Azure"/>
-
-						<Grid>
-							<Grid.ColumnDefinitions>
-								<ColumnDefinition Width="*"/>
-								<ColumnDefinition Width="Auto"/>
-							</Grid.ColumnDefinitions>
-
-							<TextBox Text="{Binding ProjectPath}" Height="20" FontSize="12" VerticalAlignment="Center"/>
-							<Button Grid.Column="1" Content="Browse" Width="100" Height="20" Margin="5,0,0,0"/>
-						</Grid>
-					</StackPanel>
-				</Grid>
-				<Grid Grid.Row="2" Margin="0">
-					<StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
-						<Button x:Name="CreateProjectButton"
-								IsDefault="True" 
-								IsEnabled="{Binding IsValid}"
-								Click="CreateButton_Click" 
-								Content="Create" 
-								Width="100" 
-								Height="20" 
-								Margin="5,0"/>
-
-						<Button x:Name="NewProjectButton"
-								IsCancel="True" 
-								Click="CancelButton_Click" 
-								Content="Cancel" 
-								Width="100" 
-								Height="20" 
-								Margin="0"/>
-					</StackPanel>
-				</Grid>
-
-			</Grid>
-
-		</Grid>
-		<Grid Grid.Row="2" Grid.Column="1">
-			<StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-				<TextBlock Text="{Binding ErrorMsg}" Foreground="Red" />
+	<Border CornerRadius="3" Background="{StaticResource Editor.Window.GrayBrush3}" Width="700"
+            HorizontalAlignment="Center" Margin="0,30">
+		<StackPanel>
+			<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
+				<ListBox Width="195" Height="250" ItemsSource="{Binding ProjectTemplates}" x:Name="templateListBox"
+                     SelectedIndex="0">
+					<ListBox.ItemTemplate>
+						<DataTemplate>
+							<StackPanel Orientation="Horizontal">
+								<Image Source="{Binding Icon}" Margin="0,0,5,0"/>
+								<TextBlock Text="{Binding ProjectType}"/>
+							</StackPanel>
+						</DataTemplate>
+					</ListBox.ItemTemplate>
+				</ListBox>
+				<Border Width="400" Height="250" Margin="5,0,0,0">
+					<Border.Background>
+						<ImageBrush ImageSource="{Binding Path=SelectedItem.Screenshot, ElementName=templateListBox}"/>
+					</Border.Background>
+				</Border>
 			</StackPanel>
-		</Grid>
-	</Grid>
+			<StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
+                    Margin="0,30,0,0">
+				<TextBlock Text="Name" Width="50" Style="{StaticResource LightTextBlockStyle}"/>
+				<TextBox Width="550" Text="{Binding ProjectName, UpdateSourceTrigger=PropertyChanged}"/>
+			</StackPanel>
+			<StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
+                    Margin="0,5,0,0">
+				<TextBlock Text="Path" Width="50" Style="{StaticResource LightTextBlockStyle}"/>
+				<TextBox Width="500" Text="{Binding ProjectPath, UpdateSourceTrigger=PropertyChanged}"/>
+				<Button Content="Browse" Width="45" Margin="5,0,0,0"/>
+			</StackPanel>
+			<StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
+                    Margin="0,30,0,0">
+				<Button Content="Create" Width="96" IsDefault="True" IsEnabled="{Binding IsValid}"
+                    Click="OnCreate_Button_Click"/>
+				<Button Content="Exit" Width="96" Margin="30,0,0,0" IsCancel="True"/>
+			</StackPanel>
+			<TextBlock Text="{Binding ErrorMsg}" Foreground="{StaticResource Editor.RedBrush}"
+                       Margin="0,10,0,0" HorizontalAlignment="Center"/>
+		</StackPanel>
+	</Border>
 </UserControl>
+	
